--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="card">
 
                 <article class="img-card">
-                    <img src="img/product1.png" alt="">
+                    <img src="./img/product1.png" alt="">
                 </article>
 
                 <article class="content-card">
@@ -67,7 +67,7 @@
             <div class="card">
 
                 <article class="img-card">
-                    <img src="img/product2.png" alt="">
+                    <img src="./img/product2.png" alt="">
                 </article>
 
                 <article class="content-card">
@@ -81,7 +81,7 @@
             <div class="card">
 
                 <article class="img-card">
-                    <img src="img/product3.png" alt="">
+                    <img src="./img/product3.png" alt="">
                 </article>
 
                 <article class="content-card">
@@ -95,7 +95,7 @@
             <div class="card">
 
                 <article class="img-card">
-                    <img src="img/product4.png" alt="">
+                    <img src="./img/product4.png" alt="">
                 </article>
 
                 <article class="content-card">
@@ -109,7 +109,7 @@
             <div class="card">
 
                 <article class="img-card">
-                    <img src="img/product5.png" alt="">
+                    <img src="./img/product5.png" alt="">
                 </article>
 
                 <article class="content-card">
@@ -123,7 +123,7 @@
             <div class="card">
 
                 <article class="img-card">
-                    <img src="img/product6.png" alt="">
+                    <img src="./img/product6.png" alt="">
                 </article>
 
                 <article class="content-card">
@@ -136,7 +136,7 @@
             <div class="card">
 
                 <article class="img-card">
-                    <img src="img/ipad-removebg-preview.png" alt="">
+                    <img src="./img/ipad-removebg-preview.png" alt="">
                 </article>
 
                 <article class="content-card">
@@ -149,7 +149,7 @@
             <div class="card">
 
                 <article class="img-card">
-                    <img src="img/video_card-removebg-preview.png" alt="">
+                    <img src="./img/video_card-removebg-preview.png" alt="">
                 </article>
 
                 <article class="content-card">
@@ -178,7 +178,7 @@
             
             <article class="relevant-container">
                 <article class="img-re">
-                    <img src="img/product7.jpg" alt="">
+                    <img src="./img/product7.jpg" alt="">
                 </article>
             </article>
 
