fixing shopping cart css

--- a/index.html
+++ b/index.html
@@ -228,7 +228,13 @@
 
         <section class="shopping-cart"> 
             <div class="container">
-                <h1 class="text-center" id="text-center">CARRITO</h1>
+                <article class="shoppingTitle">
+                    <div>
+                        <span class="material-symbols-outlined" id="toggleId">
+                            shopping_cart
+                        </span></div>
+                        <h1 class="text-center" id="text-center">CARRITO</h1>
+                </article>
                 <!-- ? START SHOPPING CART ITEMS -->
                 <div class="shopping-cart-items shoppingCartItemsContainer">
                 </div>
@@ -255,7 +261,6 @@
                         </div>
                     </div>
                 </div>
-    
                 <!-- END TOTAL -->
     
                 <!-- START MODAL COMPRA -->
